# gnome-certauth

./: .cvsignore  Makefile.am  autogen.sh  configure.ac  gnome-certauth-0.0.pc.in  gnome-certauth.spec.in
gnome-certauth/: .cvsignore  Makefile.inc  gca-certificate-listener.c  gca-certificate-listener.h  gca-certificate-source.c  gca-certificate-source.h  gca-marshal.list  gca-nss-certificate-source.c  gca-nss-certificate-source.h  gca-nss.c  gca-nss.h  gca-util.c  gca-util.h
idl/: CertificateAuthentication.idl  Makefile.inc
